[gd_scene load_steps=12 format=3 uid="uid://drkcoyvm8ubkv"]

[ext_resource type="Script" path="res://Scripts/PCs/Player.gd" id="1_dtsbk"]
[ext_resource type="PackedScene" uid="uid://bp4ckvo1qo0fa" path="res://Nodes/PCs/arm.tscn" id="2_pgpvo"]
[ext_resource type="AudioStream" uid="uid://dm28pucffhuss" path="res://Audio/320181__dland__hint.ogg" id="3_mm75g"]
[ext_resource type="AudioStream" uid="uid://g5ng5cyxq3w8" path="res://Audio/channelflip.ogg" id="4_r4i6m"]
[ext_resource type="AudioStream" uid="uid://cem2r4ku7r6m1" path="res://Audio/burunyuu.ogg" id="5_f02w4"]
[ext_resource type="PackedScene" uid="uid://c0dtutfiqiton" path="res://Nodes/PCs/action_arm.tscn" id="6_1hfmn"]
[ext_resource type="AudioStream" uid="uid://bcind3vgaqucx" path="res://Audio/fast-whoosh-118248.ogg" id="7_8f07a"]
[ext_resource type="AudioStream" uid="uid://d2kc286yyo74j" path="res://Audio/roblox-pizza-place-scared.ogg" id="8_dejby"]
[ext_resource type="AudioStream" uid="uid://by5bo06m4yutj" path="res://Audio/gravity-coil-sound-195556.ogg" id="9_xlj8d"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4lwht"]
radius = 0.4
height = 1.8

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_exu03"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.315695, 1.38574, 2.07317)
script = ExtResource("1_dtsbk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00288486, -0.0092864, -0.0127981)
mesh = SubResource("CapsuleMesh_4lwht")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_exu03")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.424925, 0)
far = 800.0

[node name="Arm" parent="Head/Camera3D" instance=ExtResource("2_pgpvo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.529129, -0.601383, -1.06356)

[node name="power_sfx" type="AudioStreamPlayer" parent="Head/Camera3D/Arm"]
stream = ExtResource("3_mm75g")

[node name="channel_sfx" type="AudioStreamPlayer" parent="Head/Camera3D/Arm"]
stream = ExtResource("4_r4i6m")

[node name="burunyuu_sfx" type="AudioStreamPlayer" parent="Head/Camera3D/Arm"]
stream = ExtResource("5_f02w4")

[node name="Action_Arm" parent="Head/Camera3D" instance=ExtResource("6_1hfmn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.565694, -0.60837, -1.39178)

[node name="woosh_sfx" type="AudioStreamPlayer" parent="Head/Camera3D/Action_Arm"]
stream = ExtResource("7_8f07a")

[node name="pizza_sfx" type="AudioStreamPlayer" parent="Head/Camera3D/Action_Arm"]
stream = ExtResource("8_dejby")

[node name="coil_sfx" type="AudioStreamPlayer" parent="Head/Camera3D/Action_Arm"]
stream = ExtResource("9_xlj8d")
